# haskell_life

./: .gitignore  Life.hs  Main.hs  README  README.markdown  life.cabal
tests/: glider-gun  queen-bee-shuttle
